🔧 chore(.gitignore): update .gitignore to ignore /tests/unit/coverage and yarn-error.log 🔧 chore(Dockerfile): fix typo in Dockerfile RUN command 🔧 chore(README.md): add testing section with link to testing recipes 🔧 chore(package.json): update devDependencies versions 🔧 chore(setupTest.ts): add setupTest.ts file for unit testing setup 🔧 chore(app.html): update font preload link href 🔧 chore(hooks.server.ts): add TODO comment for checking user on event.locals 🔧 chore(Footer.svelte): add script tag with title variable 🔧 chore(Navbar.svelte): update Shop link href to /sneakers 🔧 chore(icons): add BurgerIcon and GoogleIcon components
🎉 feat(SearchIcon.svelte): add SearchIcon component
🔨 refactor(Search.svelte): update class names and structure
🔨 refactor(Footer.spec.ts): update test suite for Footer component
🔨 refactor(ModalSearch.spec.ts): update test suite for ModalSearch component

🆕 feat(Navbar.spec.ts): add test for Navbar component
🐛 fix(types.ts): fix typo in updatedAt property name
🆕 feat(currency.ts): add formatCurrency function
🆕 feat(handlers.ts): add mock data and handlers for API requests
🆕 feat(server.ts): add server setup for mock API
🆕 feat(setup.ts): add setup for mock server
🐛 fix(+layout.svelte): fix import paths for icons
🆕 feat(+page.server.ts): add form validation and login action

🐛 fix(login): remove unused imports and fix variable names
🐛 fix(login): fix input error class binding and add aria-invalid attribute
🐛 fix(login): fix button text based on delayed state
🐛 fix(login): add reset button to reset form
🐛 fix(register): remove unused import
🐛 fix(sneakers): format createdAt and price values
🐛 fix(sneakers): update table head and body values
🐛 fix(sneakers): update table foot value
🐛 fix(sneakers): update page title
🐛 fix(sneakers): update table component and add add sneaker button
✨ feat(sneakers): add server-side load function for individual sneaker page

📝 chore(sneakers): add +page.svelte component for displaying sneaker details
📝 chore(s

--- a/svelte-frontend/src/app.html
+++ b/svelte-frontend/src/app.html
@@ -7,7 +7,7 @@
 		<!-- Preloading fonts -->
 		<link
 			rel="preload"
-			href="%sveltekit.assets%/fonts/Inter-VariableFont_slnt,wght.ttf"
+			href="%sveltekit.assets%/fonts/Montserrat-VariableFont_wght.ttf"
 			as="font"
 			type="font/ttf"
 			crossorigin
